# archiver

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
include/: archive.hpp  boolio.hpp  decoder.hpp  encoder.hpp  flags.hpp  huffman.hpp  report.hpp
samples/: abcde_compressed  doctest_compressed  strange.txt  strange_compressed
src/: archive.cpp  boolio.cpp  decoder.cpp  encoder.cpp  flags.cpp  huffman.cpp  main.cpp
test/: boolio_test.cpp  decoder_test.cpp  encoder_test.cpp  flags_test.cpp  huffman_test.cpp  test.cpp
